sgx/third_party/crates-io/vendor/rocket_codegen/tests/ui-fail/responder-types.stderr
error[E0277]: the trait bound `u8: rocket::response::Responder<'_>` is not satisfied
  --> $DIR/responder-types.rs:11:5
   |
11 |     thing: u8,
   |     ^^^^^^^^^ the trait `rocket::response::Responder<'_>` is not implemented for `u8`
   |
   = note: required by `rocket::response::Responder::respond_to`

error[E0277]: the trait bound `rocket::http::Header<'_>: std::convert::From<u8>` is not satisfied
  --> $DIR/responder-types.rs:18:5
   |
18 |     other: u8,
   |     ^^^^^^^^^ the trait `std::convert::From<u8>` is not implemented for `rocket::http::Header<'_>`
   |
   = help: the following implementations were found:
             rocket::http::Header<'static> as $TRAIT
             rocket::http::Header<'static> as $TRAIT
             rocket::http::Header<'static> as $TRAIT
             rocket::http::Header<'static> as $TRAIT
           and $N others
   = note: required because of the requirements on the impl of `std::convert::Into<rocket::http::Header<'_>>` for `u8`

error[E0277]: the trait bound `u8: rocket::response::Responder<'_>` is not satisfied
  --> $DIR/responder-types.rs:24:5
   |
24 |     thing: u8,
   |     ^^^^^^^^^ the trait `rocket::response::Responder<'_>` is not implemented for `u8`
   |
   = note: required by `rocket::response::Responder::respond_to`

error[E0277]: the trait bound `rocket::http::Header<'_>: std::convert::From<u8>` is not satisfied
  --> $DIR/responder-types.rs:26:5
   |
26 |     other: u8,
   |     ^^^^^^^^^ the trait `std::convert::From<u8>` is not implemented for `rocket::http::Header<'_>`
   |
   = help: the following implementations were found:
             rocket::http::Header<'static> as $TRAIT
             rocket::http::Header<'static> as $TRAIT
             rocket::http::Header<'static> as $TRAIT
             rocket::http::Header<'static> as $TRAIT
           and $N others
   = note: required because of the requirements on the impl of `std::convert::Into<rocket::http::Header<'_>>` for `u8`

error[E0277]: the trait bound `rocket::http::Header<'_>: std::convert::From<std::string::String>` is not satisfied
  --> $DIR/responder-types.rs:34:5
   |
34 |     then: String,
   |     ^^^^^^^^^^^^ the trait `std::convert::From<std::string::String>` is not implemented for `rocket::http::Header<'_>`
   |
   = help: the following implementations were found:
             rocket::http::Header<'static> as $TRAIT
             rocket::http::Header<'static> as $TRAIT
             rocket::http::Header<'static> as $TRAIT
             rocket::http::Header<'static> as $TRAIT
           and $N others
   = note: required because of the requirements on the impl of `std::convert::Into<rocket::http::Header<'_>>` for `std::string::String`

error[E0277]: the trait bound `usize: rocket::response::Responder<'_>` is not satisfied
   --> $DIR/responder-types.rs:39:13
    |
39  | fn foo() -> usize { 0 }
    |             ^^^^^ the trait `rocket::response::Responder<'_>` is not implemented for `usize`
    | 
   ::: $ROCKET/core/lib/src/handler.rs:202:20
    |
202 |     pub fn from<T: Responder<'r>>(req: &Request<'_>, responder: T) -> Outcome<'r> {
    |                    ------------- required by this bound in `rocket::handler::<impl rocket::Outcome<rocket::Response<'r>, rocket::http::Status, rocket::Data>>::from`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.
